syntax = "proto3";

package calculator;
option csharp_namespace = "CalculatorPb";

message AvgRequest {
  int32 number = 1;
}

message AvgResponse {
  double result = 1;
}