syntax = "proto3";

package calculator;
option csharp_namespace = "CalculatorPb";

message MaxRequest {
  int32 number = 1;
}

message MaxResponse {
  int32 result = 1;
}