syntax = "proto3";

package calculator;
option csharp_namespace = "Calculator";

message PrimeRequest {
  int64 number = 1;
}

message PrimeResponse {
  int64 result = 1;
}