syntax = "proto3";

package calculator;
option csharp_namespace = "Calculator";

message SqrtRequest {
  int32 number = 1; // could be uint32 number = 1;
}

message SqrtResponse {
  double result = 1;
}